# MAI-OOP-LABS-cpp-2025

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
lab1/: CMakeLists.txt  palindrome.cpp  palindrome.h  palindrome_app.cpp  palindrome_test.cpp
